<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_user"
        android:title="@string/pref_user">

        <EditTextPreference
            android:dialogTitle="@string/pref_username_dialog"
            android:key="pref_username"
            android:summary="@string/pref_username_summary"
            android:title="@string/pref_username_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/pref_sms_storage_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_auto_delete"
            android:summary="@string/pref_summary_auto_delete"
            android:title="@string/pref_title_auto_delete" />
        <Preference
            android:dependency="pref_key_auto_delete"
            android:key="pref_key_sms_delete_limit"
            android:summary="@string/pref_summary_delete_limit"
            android:title="@string/pref_title_sms_delete" />
        <Preference
            android:dependency="pref_key_auto_delete"
            android:key="pref_key_mms_delete_limit"
            android:summary="@string/pref_summary_delete_limit"
            android:title="@string/pref_title_mms_delete" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_country"
        android:title="@string/pref_country_title">

        <ListPreference
            android:entries="@array/pais"
            android:entryValues="@array/codigoPais"
            android:key="pref_country"
            android:summary="Select your Country"
            android:title="Select Country" />

    </PreferenceCategory>
</PreferenceScreen>